# S2S

./: .gitignore  AI_CONTEXT.md  CONTEXT.md  CONTRIBUTING.md  EXPERIMENTS_ANALYSIS.md  LICENSE  QUICKSTART.md  README.md  S2S_ARCHITECTURE_MAP.md  S2S_COMPLETE_AUDIT_SUMMARY.md  S2S_GITHUB_ROADMAP.md  S2S_TECHNICAL_RELATION_MAP.md  SECURITY.md  STANDARDS_SECURITY_AUDIT.md  UTILITIES_SCRIPTS_ANALYSIS.md  amputee_adapter.py  certify_ninapro_db5.py  certify_roboturk.py  certify_s2s_dataset.py  collect_action.py  count_real_datasets.py  count_tiers.py  debug_jerk.py  debug_physics.py  demo_physical_ai.html  deploy_fixes.sh  deploy_s2s.sh  download_openx.sh  download_wesad.py  download_wesad_retry.sh  extract_training_data.py  hybrid_cnn_plan.md  hybrid_results_summary.md  pack_s2s.py  pyproject.toml  render.yaml  requirements-api.txt  requirements-dashboard.txt  requirements-ml.txt  review.html  (+18 more)
.github/: FUNDING.yml
dashboard/: app.py
docs/: S2S_Roadmap_2026_v2.docx  S2S_pipeline_guide.md  active_learning.md  demo.html  index.html  pose.html  viz.html  viz_data.json
droid_certified/: droid_summary.json  ep_0000.json  ep_0001.json  ep_0002.json  ep_0003.json  ep_0004.json  ep_0005.json  ep_0006.json  ep_0007.json  ep_0008.json  ep_0009.json  ep_0010.json  ep_0011.json  ep_0012.json  ep_0013.json  ep_0014.json  ep_0015.json  ep_0016.json  ep_0017.json  ep_0018.json  ep_0019.json  ep_0020.json  ep_0021.json  ep_0022.json  ep_0023.json  ep_0024.json  ep_0025.json  ep_0026.json  ep_0027.json  ep_0028.json  ep_0029.json  ep_0030.json  ep_0031.json  ep_0032.json  ep_0033.json  ep_0034.json  ep_0035.json  ep_0036.json  ep_0037.json  ep_0038.json  (+11 more)
examples/: quick_start.py
experiments/: analyze_window_normalization.py  auto_router.py  benchmark_run_latest.json  certify_openx.py  certify_roboturk.py  command_motion_map.json  corruption_experiment.py  (+122 more)
(+71877 files in other folders)
